# Prism

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: architecture.md
innersafe-mas/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
innersafe-mas/examples/: medical_mas_demo.py
innersafe-mas/src/innersafe_mas/copyright/: kgw_watermark.py
innersafe-mas/src/innersafe_mas/governance/: __init__.py
innersafe-mas/src/innersafe_mas/privacy/: __init__.py  srpg_engine.py
innersafe-mas/src/innersafe_mas/utils/: __init__.py
innersafe-mas/tests/: test_governance.py  test_privacy.py
src/innersafe_mas/: __init__.py  api.py  llm.py  pipeline.py
src/innersafe_mas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/innersafe_mas/copyright/: __init__.py  graph_adapter.py  kgw_watermark.py  mock_components.py
src/innersafe_mas/copyright/attacks/: __init__.py  base.py  simple_attacks.py
src/innersafe_mas/copyright/evaluation/: __init__.py  robustness_test.py
src/innersafe_mas/copyright/integrations/: __init__.py  huggingface_wrapper.py
src/innersafe_mas/governance/: __init__.py  game_router.py
src/innersafe_mas/privacy/: __init__.py  srpg_engine.py
tests/: test_copyright.py  test_copyright_pipeline.py  test_privacy.py  test_public_api.py  test_secure_pipeline.py
